// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`When shown, draws a rect and line to the current time 1`] = `
.emotion-0 {
  position: relative;
  border: 1px solid #ffffff19;
  border-radius: var(--border-radius);
  overflow: hidden;
  width: 100%;
  height: 100%;
  display: block;
}

<div>
  <svg
    class="emotion-0 emotion-1"
    preserveAspectRatio="xMidYMid meet"
    viewBox="0 0 0 0"
  >
    <g>
      <rect
        fill="#000"
        fill-opacity="0.25"
        height="-140"
        width="-45.65217391304348"
        x="40"
        y="110"
      />
      <line
        stroke="#fff"
        stroke-width="1"
        x1="-5.652173913043476"
        x2="-5.652173913043476"
        y1="110"
        y2="-30"
      />
    </g>
  </svg>
</div>
`;

exports[`When shown, gives a offset for bandWidth 1`] = `
.emotion-0 {
  position: relative;
  border: 1px solid #ffffff19;
  border-radius: var(--border-radius);
  overflow: hidden;
  width: 100%;
  height: 100%;
  display: block;
}

<div>
  <svg
    class="emotion-0 emotion-1"
    preserveAspectRatio="xMidYMid meet"
    viewBox="0 0 0 0"
  >
    <g>
      <rect
        fill="#000"
        fill-opacity="0.25"
        height="-140"
        width="-44.70954356846473"
        x="40"
        y="110"
      />
      <line
        stroke="#fff"
        stroke-width="1"
        x1="-4.70954356846473"
        x2="-4.70954356846473"
        y1="110"
        y2="-30"
      />
    </g>
  </svg>
</div>
`;
